--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name localhost;        
+        server_name mattwelke.com;        
 
         location / {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,7 +17,7 @@ http {
 
     server {
         listen 80;
-        server_name node-app-a.localhost;        
+        server_name node-app-a.mattwelke.com;        
 
         location / {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ http {
 
     server {
         listen 80;
-        server_name node-app-b.localhost;        
+        server_name node-app-b.mattwelke.com;        
 
         location / {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
